@@ -26,6 +26,8 @@
 #ifndef _winsparkle_h_
 #define _winsparkle_h_
 
+#include <stddef.h>
+
 #include "winsparkle-version.h"
 
 #if !BUILDING_WIN_SPARKLE && defined(_MSC_VER)
@@ -100,6 +102,28 @@ WIN_SPARKLE_API void win_sparkle_cleanup();
     @param url  URL of the appcast.
  */
 WIN_SPARKLE_API void win_sparkle_set_appcast_url(const char *url);
+
+/**
+    Sets application metadata.
+
+    Normally, these are taken from VERSIONINFO/StringFileInfo resources,
+    but if your application doesn't use them for some reason, using this
+    function is an alternative.
+
+    @param company_name  Company name of the vendor.
+    @param app_name      Application name. This is both shown to the user
+                         and used in HTTP User-Agent header.
+    @param app_version   Version of the app, as string (e.g. "1.2" or "1.2rc1").
+
+    @note @a company_name and @a app_name are used to determine the location
+          of WinSparkle settings in registry.
+          (HKCU\Software\<company_name>\<app_name>\WinSparkle is used.)
+
+    @since 0.3.
+ */
+WIN_SPARKLE_API void win_sparkle_set_app_details(const wchar_t *company_name,
+                                                 const wchar_t *app_name,
+                                                 const wchar_t *app_version);
 
 //@}
 
