@@ -35,6 +35,9 @@ namespace winsparkle
 
 CriticalSection Settings::ms_csVars;
 std::string Settings::ms_appcastURL;
+std::wstring Settings::ms_companyName;
+std::wstring Settings::ms_appName;
+std::wstring Settings::ms_appVersion;
 
 
 /*--------------------------------------------------------------------------*
