@@ -48,6 +48,11 @@ namespace winsparkle
 class Settings
 {
 public:
+    /**
+        Getting app metadata.
+     */
+    //@{
+
     /// Get location of the appcast
     static std::string GetAppcastURL()
     {
@@ -57,15 +62,39 @@ public:
 
     /// Return application name
     static std::wstring GetAppName()
-        { return GetVerInfoField(L"ProductName"); }
+    {
+        CriticalSectionLocker lock(ms_csVars);
+        if ( ms_appName.empty() )
+            ms_appName = GetVerInfoField(L"ProductName");
+        return ms_appName;
+    }
 
     /// Return (human-readable) application version
     static std::wstring GetAppVersion()
-        { return GetVerInfoField(L"ProductVersion"); }
+    {
+        CriticalSectionLocker lock(ms_csVars);
+        if ( ms_appVersion.empty() )
+            ms_appVersion = GetVerInfoField(L"ProductVersion");
+        return ms_appVersion;
+    }
 
     /// Return name of the vendor
     static std::wstring GetCompanyName()
-        { return GetVerInfoField(L"CompanyName"); }
+    {
+        CriticalSectionLocker lock(ms_csVars);
+        if ( ms_companyName.empty() )
+            ms_companyName = GetVerInfoField(L"CompanyName");
+        return ms_companyName;
+    }
+    //@}
+
+    /**
+        Overwriting app metadata.
+
+        Normally, they would be retrieved from resources, but it's sometimes
+        necessary to set them manually.
+     */
+    //@{
 
     /// Set appcast location
     static void SetAppcastURL(const char *url)
@@ -73,6 +102,29 @@ public:
         CriticalSectionLocker lock(ms_csVars);
         ms_appcastURL = url;
     }
+
+    /// Set application name
+    static void SetAppName(const wchar_t *name)
+    {
+        CriticalSectionLocker lock(ms_csVars);
+        ms_appName = name;
+    }
+
+    /// Set application version
+    static void SetAppVersion(const wchar_t *version)
+    {
+        CriticalSectionLocker lock(ms_csVars);
+        ms_appVersion = version;
+    }
+
+    /// Set company name
+    static void SetCompanyName(const wchar_t *name)
+    {
+        CriticalSectionLocker lock(ms_csVars);
+        ms_companyName = name;
+    }
+    //@}
+
 
     /**
         Access to runtime configuration.
@@ -135,7 +187,10 @@ private:
     // guards the variables below:
     static CriticalSection ms_csVars;
 
-    static std::string ms_appcastURL;
+    static std::string  ms_appcastURL;
+    static std::wstring ms_companyName;
+    static std::wstring ms_appName;
+    static std::wstring ms_appVersion;
 };
 
 } // namespace winsparkle
