@@ -1,4 +1,7 @@
 
+- Added win_sparkle_set_app_details() for setting app metadata from code,
+  as an alternative to their extraction from resources.
+
 Version 0.2
 -----------
 
